# SWEN431-A2

./: .gitignore  README.md  SWEN431-A2.cabal  output-004.txt  output-101.txt  output-102.txt  output-103.txt  output-104.txt  output-110.txt  output-111.txt  output-120.txt  output-130.txt  output-131.txt  output-140.txt  output-150.txt  output-151.txt  output-210.txt  output-225.txt  output-232.txt  output-234.txt  output-250.txt  output-252.txt  output-260.txt  ws.hs  ws_cur.hi  ws_cur.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.8/: package.cache  ws-0.1.0.0-inplace.conf
expected/: expected-102.txt  expected-153.txt  expected-200.txt  expected-210.txt  expected-230.txt
inputs/: input-999.txt
src/: Main.hs
test/: Spec.hs  test.py  test_results.txt
