cabal-version:      2.4
name:               ws
version:            0.1.0.0
synopsis:           Stack-based interpreter program
description:        A stack-based interpreter to process arithmetic and stack operations.
author:             Your Name
maintainer:         your.email@example.com
category:           Web
build-type:         Simple
extra-source-files: README.md

executable ws
  main-is:           Main.hs
  hs-source-dirs:    src 
  ghc-options:       -Wall -Werror
  build-depends:
    base >=4.7 && <5,
    filepath
  default-language:  Haskell2010

library
  hs-source-dirs:      src  
  exposed-modules:     
  build-depends:
    base >=4.7 && <5,
    filepath
  default-language:    Haskell2010

test-suite ws-tests
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  build-depends:
    base >=4.7 && <5,
    hspec,
    filepath,
    process,
    directory,
    ws
  default-language: Haskell2010
